Bug 6558 - [mainline regression] Wrongly reverted patches
Summary: [mainline regression] Wrongly reverted patches
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ada (show other bugs)
Version: 3.2
: P3 normal
Target Milestone: 3.3
Assignee: Geert Bosch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-05-04 09:26 UTC by Joseph S. Myers
Modified: 2005-01-07 14:16 UTC (History)
5 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph S. Myers 2002-05-04 09:26:00 UTC
The big Ada merge (mainline only) wrongly reverted some patches that
had been made to the FSF GCC tree.  These need to be unreverted, and a
proper check made for whether any other patches were reverted that
shouldn't have been.

A list, which may be incomplete, is at
<URL:http://gcc.gnu.org/ml/gcc-patches/2002-03/msg00402.html>.

Release:
3.2 20020504 (experimental)

Environment:
System: Linux digraph 2.2.20 #2 Sat Nov 10 16:44:22 UTC 2001 i686 unknown
Architecture: i686

 
host: i686-pc-linux-gnu
build: i686-pc-linux-gnu
target: i686-pc-linux-gnu
configured with: ../gcc-cvs/configure --prefix=/opt/gcc/mainline --disable-shared --enable-threads=posix --with-system-zlib
Comment 1 Joseph S. Myers 2002-05-04 09:26:00 UTC
Fix:
Unrevert the patches, taking care about whether they need updating in
consequence of other changes to the Ada front end.  Check carefully
for any other reverted patches, and unrevert them.
Comment 2 Joseph S. Myers 2002-09-15 13:09:41 UTC
Responsible-Changed-From-To: unassigned->bosch
Responsible-Changed-Why: It's the responsibility of the person who reverted the
    patches by mistake in the merge to check carefully for
    what was reverted and unrevert it.
Comment 3 Joseph S. Myers 2002-09-15 13:09:41 UTC
State-Changed-From-To: open->analyzed
State-Changed-Why: Patch reversion still present in the tree.  Incorrect
    reversion forms a regression.
Comment 4 Zack Weinberg 2002-10-28 23:19:19 UTC
From: Zack Weinberg <zack@codesourcery.com>
To: Nathanael Nerode <neroden@twcny.rr.com>
Cc: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, bosch@gcc.gnu.org,
	jsm28@cam.ac.uk, gcc-bugs@gcc.gnu.org
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Mon, 28 Oct 2002 23:19:19 -0800

 On Tue, Oct 29, 2002 at 02:05:06AM -0500, Nathanael Nerode wrote:
 > What sort of progress can we make on this?
 > 
 > Clearly what needs to be checked are the patches to the FSF tree from 
 > 2001 and earlier.  But how much earlier ?!?  Is there an earlier point 
 > at which we know that the ACT (?) tree had been merged *from* the FSF 
 > tree, so that we don't need to look earlier than that?  Otherwise this 
 > is potentially an endless problem.
 
 My understanding is that the only patches at issue were those lost
 when this change occurred:
 
 2002-03-07  Geert Bosch  <bosch@gnat.com>
 
         * 41intnam.ads, 42intnam.ads, 4aintnam.ads, 4cintnam.ads,
         4dintnam.ads, 4gintnam.ads, 4hintnam.ads, 4lintnam.ads,
         4mintnam.ads, 4pintnam.ads, 4rintnam.ads, 4sintnam.ads,
         4uintnam.ads, 4vcalend.adb, 4zintnam.ads, 52system.ads,
         5amastop.adb, 5asystem.ads, 5ataprop.adb, 5atpopsp.adb,
         5avxwork.ads, 5bosinte.adb, 5bsystem.ads, 5esystem.ads,
 	[...]
         utils.c, utils2.c, validsw.adb, xnmake.adb, xr_tabls.adb,
         xr_tabls.ads, xref_lib.adb, xref_lib.ads : Merge in ACT changes.
 
         * 1ssecsta.adb, 1ssecsta.ads, a-chlat9.ads, a-cwila9.ads,
         g-enblsp.adb, g-md5.adb, g-md5.ads, gnatname.adb, gnatname.ads,
         mkdir.c, osint-b.adb, osint-b.ads, osint-c.adb, osint-c.ads,
         osint-l.adb, osint-l.ads, osint-m.adb, osint-m.ads : New files
 
         * 3lsoccon.ads, 5qparame.ads, 5qvxwork.ads, 5smastop.adb,
         5zparame.ads, gnatmain.adb, gnatmain.ads, gnatpsys.adb : Removed
 
         * mdllfile.adb, mdllfile.ads, mdlltool.adb, mdlltool.ads : Renamed
         to mdll-fil.ad[bs] and mdll-util.ad[bs]
 
         * mdll-fil.adb, mdll-fil.ads, mdll-utl.adb, mdll-utl.ads : Renamed
         from mdllfile.ad[bs] and mdlltool.ad[bs]
 
 I would like to point out that it is just shy of eight months since
 this happened, and there has been no indication that Mr. Bosch has
 lifted a finger to address the problem that he created (beyond
 claiming that it would be fixed soon).
 
 I am tempted to invoke the patch reversion procedure and demand that
 this entire merge be backed out.  I will certainly do so if the issue
 is not resolved by the time 3.3 branches.
 
 zw

Comment 5 Nathanael C. Nerode 2002-10-29 02:05:06 UTC
From: Nathanael Nerode <neroden@twcny.rr.com>
To: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, bosch@gcc.gnu.org,
   jsm28@cam.ac.uk, gcc-bugs@gcc.gnu.org
Cc:  
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Tue, 29 Oct 2002 02:05:06 -0500

 What sort of progress can we make on this?
 
 Clearly what needs to be checked are the patches to the FSF tree from 
 2001 and earlier.  But how much earlier ?!?  Is there an earlier point 
 at which we know that the ACT (?) tree had been merged *from* the FSF 
 tree, so that we don't need to look earlier than that?  Otherwise this 
 is potentially an endless problem.
 
 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=6558
 

Comment 6 Joseph S. Myers 2002-10-29 10:27:44 UTC
From: "Joseph S. Myers" <jsm28@cam.ac.uk>
To: Zack Weinberg <zack@codesourcery.com>
Cc: Nathanael Nerode <neroden@twcny.rr.com>,  <gcc-gnats@gcc.gnu.org>, 
     <bosch@gcc.gnu.org>,  <gcc-bugs@gcc.gnu.org>
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Tue, 29 Oct 2002 10:27:44 +0000 (GMT)

 On Mon, 28 Oct 2002, Zack Weinberg wrote:
 
 > My understanding is that the only patches at issue were those lost
 > when this change occurred:
 > 
 > 2002-03-07  Geert Bosch  <bosch@gnat.com>
 
 Yes.  It's all patches from non-ACT people to the FSF tree before then
 that need to be checked to make sure they are still in the tree or have
 been superseded by subsequent changes.
 
 I think someone found an example (which may or may not now have been
 unreverted individually) that wasn't among the examples I gave of patches
 wrongly reverted by this change, so it is necessary to do that check
 rather than relying on my list.
 
 > I would like to point out that it is just shy of eight months since
 > this happened, and there has been no indication that Mr. Bosch has
 > lifted a finger to address the problem that he created (beyond
 > claiming that it would be fixed soon).
 
 -- 
 Joseph S. Myers
 jsm28@cam.ac.uk
 

Comment 7 Nathanael C. Nerode 2002-10-29 15:37:19 UTC
From: Nathanael Nerode <neroden@twcny.rr.com>
To: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, bosch@gcc.gnu.org,
   jsm28@cam.ac.uk, gcc-bugs@gcc.gnu.org
Cc:  
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Tue, 29 Oct 2002 15:37:19 -0500

 Hmm.  I think I see a way of cutting down on the number of patches to 
 check.  Looking at cvsweb, it seems that most of the commits to the Ada 
 ChangeLog are by Mr. Bosch himself.  :-)  If I assume that he didn't 
 accidentally revert any of his own patches, then I have a more 
 reasonable number to go through.
 
 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=6558
 

Comment 8 Nathanael C. Nerode 2002-10-29 15:52:51 UTC
From: Nathanael Nerode <neroden@twcny.rr.com>
To: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, bosch@gcc.gnu.org,
   jsm28@cam.ac.uk, gcc-bugs@gcc.gnu.org
Cc:  
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Tue, 29 Oct 2002 15:52:51 -0500

 All patches appear OK up through 1.102.  This is a good start.
 
 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=6558
 

Comment 9 Geert Bosch 2002-10-29 15:59:58 UTC
From: Geert Bosch <bosch@gnat.com>
To: Nathanael Nerode <neroden@twcny.rr.com>
Cc: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, bosch@gcc.gnu.org,
	jsm28@cam.ac.uk, gcc-bugs@gcc.gnu.org
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Tue, 29 Oct 2002 15:59:58 -0500

 On Tuesday, Oct 29, 2002, at 15:37 America/New_York, Nathanael Nerode 
 wrote:
 > Hmm.  I think I see a way of cutting down on the number of patches to 
 > check.  Looking at cvsweb, it seems that most of the commits to the 
 > Ada ChangeLog are by Mr. Bosch himself.  :-)  If I assume that he 
 > didn't accidentally revert any of his own patches, then I have a more 
 > reasonable number to go through.
 
 The same is true for all patches from @gnat.com addresses. The main
 error I made was to try to merge ACT->FSF without first doing FSF->ACT.
 I tried to go through the entire diff and make sure no changes were 
 undone,
 but I missed some cases. I will not make this mistake again.
 Nathanael, thank you for your help.
 
    -Geert
 

Comment 10 Nathanael C. Nerode 2002-10-29 16:04:08 UTC
From: Nathanael Nerode <neroden@twcny.rr.com>
To: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, bosch@gcc.gnu.org,
   jsm28@cam.ac.uk, gcc-bugs@gcc.gnu.org
Cc:  
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Tue, 29 Oct 2002 16:04:08 -0500

 Found the first bogus reversion, from ChangeLog 1.105 by neil.
 
 ada:	* misc.c (gnat_decode_option, gnat_init_options): Make definitions
 	static too.
 	(gnat_init): Don't return NULL.
 	
 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&database=gcc&pr=6558
 
 So the ChangeLog only has to be checked from here to Geert's fatal patch 
 at 1.201.  I can and will do this; I'd like someone else to help me by 
 unreverting the patches as I find them.  I think we can get this done 
 pretty efficiently, actually.
 
 --Nathanael
 

Comment 11 Geert Bosch 2002-10-29 16:08:31 UTC
From: Geert Bosch <bosch@gnat.com>
To: Nathanael Nerode <neroden@twcny.rr.com>
Cc: gcc-gnats@gcc.gnu.org, gcc-prs@gcc.gnu.org, bosch@gcc.gnu.org,
	jsm28@cam.ac.uk, gcc-bugs@gcc.gnu.org
Subject: Re: ada/6558: [mainline regression] Wrongly reverted patches
Date: Tue, 29 Oct 2002 16:08:31 -0500

 On Tuesday, Oct 29, 2002, at 16:04 America/New_York, Nathanael Nerode 
 wrote:
 > So the ChangeLog only has to be checked from here to Geert's fatal 
 > patch at 1.201.  I can and will do this; I'd like someone else to help 
 > me by unreverting the patches as I find them.  I think we can get this 
 > done pretty efficiently, actually.
 
 I'll unrevert any reverted patches you'll find.
 
    -Geert
 

Comment 12 Geert Bosch 2002-10-29 22:01:19 UTC
From: bosch@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: ada/6558
Date: 29 Oct 2002 22:01:19 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Changes by:	bosch@gcc.gnu.org	2002-10-29 14:01:19
 
 Modified files:
 	gcc/ada        : misc.c ChangeLog 
 
 Log message:
 	PR ada/6558
 	* misc.c: Unrevert misc.c (1.13)
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/misc.c.diff?cvsroot=gcc&r1=1.42&r2=1.43
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/ChangeLog.diff?cvsroot=gcc&r1=1.262&r2=1.263
 

Comment 13 Geert Bosch 2002-10-29 22:18:08 UTC
From: bosch@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: ada/6558
Date: 29 Oct 2002 22:18:08 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Changes by:	bosch@gcc.gnu.org	2002-10-29 14:18:08
 
 Modified files:
 	gcc/ada        : Make-lang.in ChangeLog 
 
 Log message:
 	PR ada/6558
 	* Make-lang.in (gnatbind): Depend on CONFIG_H
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/Make-lang.in.diff?cvsroot=gcc&r1=1.16&r2=1.17
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/ChangeLog.diff?cvsroot=gcc&r1=1.263&r2=1.264
 

Comment 14 Geert Bosch 2002-10-30 17:42:55 UTC
From: bosch@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: ada/6558
Date: 30 Oct 2002 17:42:55 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Changes by:	bosch@gcc.gnu.org	2002-10-30 09:42:54
 
 Modified files:
 	gcc/ada        : misc.c Make-lang.in ChangeLog 
 
 Log message:
 	PR ada/6558
 	* misc.c : Include optabs.h
 	
 	* Make-lang.in (misc.o): Add dependency on optabs.h
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/misc.c.diff?cvsroot=gcc&r1=1.43&r2=1.44
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/Make-lang.in.diff?cvsroot=gcc&r1=1.17&r2=1.18
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/ChangeLog.diff?cvsroot=gcc&r1=1.264&r2=1.265
 
Comment 15 Nathanael C. Nerode 2002-11-13 13:21:13 UTC
State-Changed-From-To: analyzed->closed
State-Changed-Why: Fixed.
Comment 16 Nathanael C. Nerode 2002-11-13 21:19:51 UTC
From: neroden@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: ada/6558
Date: 13 Nov 2002 21:19:51 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Changes by:	neroden@gcc.gnu.org	2002-11-13 13:19:51
 
 Modified files:
 	gcc/ada        : ChangeLog config-lang.in 
 
 Log message:
 	2002-11-13  Nathanael Nerode  <neroden@gcc.gnu.org>
 	PR ada/6558
 	* config-lang.in: Remove diff_excludes.
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/ChangeLog.diff?cvsroot=gcc&r1=1.266&r2=1.267
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/config-lang.in.diff?cvsroot=gcc&r1=1.6&r2=1.7