re PR ada/6558 (Wrongly reverted patches)

PR ada/6558
        * misc.c: Unrevert misc.c (1.13)

From-SVN: r58636